分布式spring cloud config

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -7,7 +7,11 @@ spring:
         git:
           uri: https://github.com/st4911/config-properties.git
           search-paths: configs
-      label: master
 
 server:
   port: 8888
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8889/eureka/
